--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.5.1",
     "next": "12.1.5",
     "postcss": "^8.4.31",
     "react": "18.0.0",
